# nonos-boot

./: Cargo.toml  Makefile  README.md  bootfix.md  build.rs  hello_uefi.c  kernel.c  kernel.elf  kernel.ld
.cargo/: config.toml
.github/workflows/: build.yml  ceremonies-ci.yml  release.yml
assets/: README.md
docs/: PROGRAMS.md
esp/: NvVars  nonos_kernel.efi
esp/EFI/Boot/: BootX64.efi
src/: config.rs  entropy.rs  handoff.rs  hardware.rs  lib.rs  loader.rs  main.rs  multiboot.rs  network.rs  secure_loader.rs  security.rs  testing.rs  ui.rs  verify.rs  zkmeta.rs  zkverify.rs
src/capsule/: mod.rs  zkmeta.rs
src/crypto/: mod.rs  sig.rs
src/handoff/: handoff.rs  mod.rs
src/loader/: loader.rs  mod.rs
src/log/: logger.rs  mod.rs
src/network/: dhcp.rs  http.rs  mod.rs  network.rs  pxe.rs  retry.rs  signature.rs  static_ip.rs
src/verify/: capsule.rs  loader.rs  mod.rs
src/zk/: ZK_ATTESTATION.md  binding.rs  errors.rs  mod.rs  parse.rs  registry.rs  transcript.rs  zkverify.rs
tools/keygen/: Cargo.toml  README.md
tools/keygen/src/: main.rs
tools/nonos-attestation-circuit/: Cargo.toml
tools/nonos-attestation-circuit/src/: lib.rs
tools/zk-ceremony/: README.md  RUNBOOK.md
tools/zk-embed/: Cargo.toml  README.md
tools/zk-embed/src/: main.rs
