[package]
name = "nonos-keygen"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.2", features = ["derive"] }
ed25519-dalek = { version = "1.0.1", features = ["std"] }
rand = "0.8"
hex = "0.4"
base64 = "0.21"
sha2 = "0.10"
blake3 = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
